@@ -23,6 +23,7 @@
   <version>2.0.2-SNAPSHOT</version>
   <versioning>
     <versions>
+      <version>2.0.0-SNAPSHOT</version>
       <version>2.0.2-SNAPSHOT</version>
     </versions>
 
