@@ -142,6 +142,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - IMPROVEMENT: add support for source bundles from p2 repositories
 - IMPROVEMENT: add support for source URI from OBR repositories
 
+- FIX: Ivy generates wrong revision in URL for Maven snapshots (IVY-1396)
 - FIX: Maven2: resolve failure when parent has <dependencyManagement> with dependency in 'import' scope (IVY-1376)
 - FIX: IvyPublish fails when using extend tags with no explicit location attribute (IVY-1391)
 - FIX: Properly handle evicted nodes in ResolveReport
